--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-tensorflow==1.1.0
-six==1.10.0
-numpy==1.12.1
+tensorflow-gpu==1.4.0
+six==1.11.0
+numpy==1.13.3
 matplotlib==1.5.1
 scikits.audiolab==0.11.0
-scipy==0.19.0
+scipy==1.0.0
 scikit_learn==0.18.1
 tabulate==0.7.7
-theano==0.9.0
+theano==1.0.1
 xlwt==1.2.0
